fix x-overflow

--- a/common/common.scss
+++ b/common/common.scss
@@ -35,6 +35,10 @@ body, h1, h2, h3, h4, h5, h6 {
   border-radius: 15px;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .alert .close {
   top: 6px;
   right: 10px;
